# khaosclip

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
.pytest_cache/v/cache/: nodeids
.ruff_cache/0.15.21/: 2066159140767514405  2400183595282632066
cloud/: README.md  app.py
docs/: ARCHITECTURE.md  SETUP_OBS.md  SETUP_WAKEWORD.md  SETUP_X_API.md  TROUBLESHOOTING.md
models/openwakeword/: README.txt
packaging/: README.md  build.ps1  installer.iss  launcher.py  nameit.spec
scripts/: setup.ps1
site/: index.html
skills/: comedy.json  crypto_alpha.json  default.json  insight_headline.json  narrative.json  yoxic_jack.json
src/khaosclip/: __init__.py  __main__.py  caption_ai.py  cli.py  config.py  events.py  history.py  log.py  obs_detect.py  skills.py  stats.py  worker.py
src/khaosclip/capture/: __init__.py  obs.py
src/khaosclip/gui/: __init__.py  app.py  picker.py  tray.py  wizard.py
src/khaosclip/pipeline/: __init__.py  captions.py  processor.py
src/khaosclip/publish/: __init__.py  manual.py  x_api.py
src/khaosclip/triggers/: __init__.py  base.py  hotkey.py  voice.py  wakeword.py
tests/: conftest.py  test_caption_ai.py  test_cloud_publish.py  test_config.py  test_desktop_app.py  test_events.py  test_history.py  test_manual_mode.py  test_processor.py  test_skills.py  test_stats.py  test_voice_matching.py  test_wakeword.py  test_worker.py  test_worker_modes.py  test_x_api.py
