[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "khaosclip"
version = "0.1.0"
description = "Voice-triggered live clipping for X streamers. You stay live — your clips post themselves."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "KhaosClipper" }]
keywords = ["streaming", "clipping", "obs", "x", "twitter", "creator-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic-settings>=2.2",
    "obsws-python>=1.7",
    "requests>=2.31",
    "requests-oauthlib>=1.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
voice = ["vosk>=0.3.45", "sounddevice>=0.4.6"]
wakeword = ["openwakeword>=0.6", "sounddevice>=0.4.6", "numpy>=1.24"]
hotkey = ["keyboard>=0.13"]
captions = ["faster-whisper>=1.0"]
ai = ["khaosclip[captions]"]
all = ["khaosclip[voice,wakeword,hotkey,captions,ai]"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
khaosclip = "khaosclip.cli:app"

[project.urls]
Homepage = "https://github.com/locallaunchsc-cloud/khaosclip"
Issues = "https://github.com/locallaunchsc-cloud/khaosclip/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/khaosclip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/khaosclip/cli.py" = ["B008"]  # typer idiom: Argument/Option in defaults
